Re-implemented in Java 1.8 Also fixes some edge cases which could cause uncaught errors if files existed but didn't meet the correct format for their handler